# AnalyzerGP

./: .gitignore  AGENTS.md  PROJECT_LAYOUT.md  investment_framework.docx  pyproject.toml  setup.sh
ai_app1/: .env  .env.example  ARCHITECTURE.md  docs.txt  main.py  test.py
ai_app1/api/: chat.py
ai_app1/core/: config.py  logger.py
ai_app1/data/: Android 开发核心注意事项与避坑指南
ai_app1/eval/: __init__.py  ablation.py  evaluate.py  experiment.py  hard_cases.json  metrics.py  qa_eval.py  ranking_eval.py  评测集
ai_app1/pre/: init_vector_db.py  init_vector_db_v2.py  verify_phase1.py  verify_phase2.py  verify_phase3.py
ai_app1/retrieval/: __init__.py  bm25_store.py  query_rewriter.py  vector_store.py
ai_app1/scripts/: download_bge_m3.py  download_qwen_rewriter.py  hf_snapshot_downloader.py  init_vector_db.py  init_vector_db_v2.py  verify_phase1.py  verify_phase2.py  verify_phase3.py
ai_app1/service/: AiClient.py  ai_client.py  bm25_store.py  embedding.py  evaluate.py  llm_service.py  multiply.py  query_rewriter.py  reranker.py  session.py  vector_store.py  评测集
ai_app1/static/: index.html
ai_app1/test/: download_bge_m3.py  embeddingTest.py  hf_snapshot_downloader.py  reranker_demo.py
ai_app1/tests/: test_api.py
ai_app2/: .env.example  main.py
ai_app2/api/: chat.py
ai_app2/core/: config.py  container.py  logger.py
ai_app2/graph/: __init__.py  builder.py  nodes.py  state.py
ai_app2/service/: retriever.py  tools.py
ai_app2/static/: index.html
ai_app3/: .env.example  main.py
ai_app3/api/: chat.py
ai_app3/core/: config.py  llm_provider.py  logger.py
ai_app3/graph/: builder.py  conditional_edges.py  nodes.py  state.py
ai_app3/service/: context_compressor.py  evaluator.py  knowledge_graph.py  query_engine.py  retriever.py  tools.py
ai_app3/static/: index.html
ai_app4/: .env.example  ARCHITECTURE.md  LEARNING_GUIDE.md  lifespan.py  main.py
ai_app4/api/: chat.py
doc/: 01-ai-app1-rag-design.md  02-ai-app2-rag-langgraph-design.md  02-investment-analyzer-design.md  03-ai-app3-rag-agentic-design.md  03-data-flow-interaction.md  04-ai-app4-wealth-ai-design.md  04-deployment-guide.md  05-ai-app2-rag-langgraph-design.md  06-ai-app3-rag-agentic-design.md  README.md  需求文档.md
domains/android/: pyproject.toml
domains/android/android_domain/: __init__.py  plugin.py
domains/android/android_domain/eval/: benchmark.json  benchmark_precise.json  qa_benchmark.json
domains/android/android_domain/prompts/: hyde.txt  system.txt
domains/android/android_domain/terms/: zh_to_en.json
domains/android/scripts/: generate_benchmark_precise.py  init_vector_db.py  init_vector_db_v2.py
domains/msmarco/: pyproject.toml
domains/msmarco/msmarco_domain/: __init__.py  plugin.py
domains/msmarco/msmarco_domain/eval/: benchmark.json  qa_benchmark.json
domains/msmarco/msmarco_domain/prompts/: hyde.txt  system.txt
domains/msmarco/scripts/: build_benchmark.py  download_and_index.py
investment_analyzer/: PROJECT_PLAN.md  config.py  main.py  monitor.py  requirements.txt  test.py
plans/: ai_app4_architecture_plan.md  ai_app4_commercial_implementation.md  ai_app4_wealth_ai_implementation_plan.md
rag_framework/: pyproject.toml
rag_framework/rag_framework/: __init__.py  container.py
rag_framework/rag_framework/core/: __init__.py  config.py  exceptions.py  factories.py  lifecycle.py  logger.py  registry.py
rag_framework/rag_framework/datasource/: __init__.py  base.py
rag_framework/rag_framework/domain/: __init__.py  base.py
rag_framework/rag_framework/embedding/: __init__.py  base.py  sentence_transformer.py
rag_framework/rag_framework/eval/: __init__.py  ablation.py  comprehensive_eval.py  experiment.py  failure_analysis.py  failure_triage.py  hit_judge.py  latency_breakdown.py  metrics.py  qa.py  query_classifier.py  ragas_eval.py  ranking.py  rerank_eval.py  retrieval_trace.py  rewrite_eval.py
rag_framework/rag_framework/indexing/: __init__.py  chunker.py  hyde.py  indexer.py
rag_framework/rag_framework/llamaindex/: __init__.py  base.py  index_config.py
rag_framework/rag_framework/llm/: __init__.py  base.py  local_client.py  openai_client.py  tool_registry.py
rag_framework/rag_framework/rerank/: __init__.py  base.py  cross_encoder.py  fallback.py
rag_framework/rag_framework/retrieval/: __init__.py  base.py  dense.py  fusion.py  sparse.py
rag_framework/rag_framework/retrieval/query_rewriter/: __init__.py  base.py  llm_rewriter.py  qwen_rewriter.py  rule_rewriter.py
rag_framework/rag_framework/session/: __init__.py  base.py  manager.py  memory_store.py
rag_framework/rag_framework/torch_models/: __init__.py  base.py  entity_recognizer.py  intent_classifier.py  sentiment_analyzer.py
scripts/: verify_refactor.py
(+44 files in other folders)
