[project]
name = "fenxicb"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.97.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pydantic>=2.13.3",
    "uvicorn>=0.34.0",
    "python-dotenv>=1.0.0",
    "tools>=1.0.27",
    "openai>=2.34.0",
    "tokenizers>=0.22.0,<=0.23.0",
    "chromadb>=1.5.9",
    "langgraph>=0.4.0",
    "langchain-openai>=0.3.0",
    "sentence-transformers>=3.0.0",
    "export>=0.2.1",
    "fastembed>=0.6.0",
    "tantivy>=0.26.0",
    "jieba>=0.42.1",
    "rag-framework",
    "android-domain",
]

[tool.uv.sources]
rag-framework = { path = "rag_framework" }
android-domain = { path = "domains/android" }

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
