[project]
name = "fenxicb"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.97.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pydantic>=2.13.3",
    "uvicorn>=0.34.0",
    "python-dotenv>=1.0.0",
    "tools>=1.0.27",
    "openai>=2.34.0",
    "tokenizers>=0.22.0,<=0.23.0",
    "chromadb>=1.5.9",
    "langgraph>=0.4.0",
    "langchain-openai>=0.3.0",
    "sentence-transformers>=3.0.0",
    "export>=0.2.1",
    "fastembed>=0.6.0",
    "tantivy>=0.26.0",
    "jieba>=0.42.1",
    "rag-framework",
    "android-domain",
    "msmarco-domain",
    "datasets>=2.0.0",
    "accelerate>=1.13.0",
    # ai_app4 新增依赖（LlamaIndex + PyTorch 任务模型）
    "llama-index-core>=0.12.0",
    "transformers>=4.46.0",
    "torch>=2.5.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
]

[tool.uv.sources]
rag-framework = { path = "rag_framework", editable = true }
android-domain = { path = "domains/android", editable = true }
msmarco-domain = { path = "domains/msmarco", editable = true }

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
