[project]
name = "android-domain"
version = "0.1.0"
description = "Android 开发助手领域插件"
requires-python = ">=3.11"
dependencies = [
    "rag-framework",
]

[tool.uv.sources]
rag-framework = { path = "../../rag_framework", editable = true }

[tool.setuptools.packages.find]
include = ["android_domain*"]
